ファビコンとdescriptionタグの追加

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>OtokuraRun</title>
+  <title>otokura.run</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="apple-touch-icon" type="image/png" href="/assets/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="/assets/icon-192x192.png">
+  <meta name="description" content="乙倉悠貴ファンのサイトです。非公式OSSプロジェクトの開発を通して、乙倉悠貴ちゃんを陰ながら応援しています。">
 </head>
 
 <body class="mat-typography">
