--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="apple-touch-icon" type="image/png" href="/assets/apple-touch-icon-180x180.png">
   <link rel="icon" type="image/png" href="/assets/icon-192x192.png">
-  <meta name="description" content="乙倉悠貴ファンのサイトです。非公式OSSプロジェクトの開発を通して、乙倉悠貴ちゃんを陰ながら応援しています。">
+  <meta name="description" content="アイドルマスターシンデレラガールズのアイドル「乙倉悠貴」のファンサイトです。非公式OSSプロジェクトの開発を通して、乙倉悠貴ちゃんを陰ながら応援しています。">
 </head>
 
 <body class="mat-typography">
